crates/es-fluent-derive/tests/ui/unchecked_registry_constructor_private.rs
fn main() {
    let _ = es_fluent::registry::StaticFluentEntryId::new_unchecked("hello");
}
